# IKT452-Computer-Vision-Project

./: .gitignore  README.md  main.py  pyproject.toml
dataset/train/labels/: img_00021.txt  img_00022.txt  img_00023.txt  img_00025.txt  img_00027.txt  img_00029.txt  img_00032.txt  img_00033.txt  img_00038.txt  img_00046.txt  img_00048.txt  img_00054.txt  img_00055.txt  img_00056.txt  img_00058.txt  img_00079.txt  img_00096.txt  img_00109.txt  img_00111.txt  img_00114.txt  img_00148.txt  img_00149.txt  img_00153.txt  img_00156.txt  img_00175.txt  img_00198.txt  img_00200.txt  img_00205.txt  img_00278.txt  img_00282.txt  img_00287.txt  img_00291.txt  img_00378.txt
dataset/val/labels/: img_00026.txt  img_00152.txt  img_00183.txt  img_00184.txt  img_00186.txt
src/: main.ipynb  main.py  plot_log.py
src/models/: YOLOv9.py  efficientDet.py  efficientdet.py  faster_rcnn.py  fpn_rcnn.py  rtdetr.py
src/utils/: args.py  augment_dataset.py  checkpoint.py  dataset.py  display.py  eval.py  gradcam.py  plot.py  train.py  validate.py
src/utils/logs/: compare_logs.py
