[project]
name = "ikt452-computer-vision-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "numpy",
  "opencv-python",
  "pillow",
  "matplotlib",
  "tqdm",
  "pyyaml",
  "rich",
  "scipy>=1.17.1",
]

